--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         <activity android:name=".register" />
         <activity android:name=".Categories" />
         <activity android:name=".Accounts" />
+        <activity android:name=".Cart"></activity>
     </application>
 
 </manifest>
