--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
         <activity android:name=".Categories" />
         <activity android:name=".Accounts" />
         <activity android:name=".Cart" />
-        <activity android:name=".ProductDetails"></activity>
+        <activity android:name=".ProductDetails" />
+        <activity android:name=".Home"></activity>
     </application>
 
 </manifest>
