--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
         <activity android:name=".Cart" />
         <activity android:name=".ProductDetails" />
         <activity android:name=".Home" />
-        <activity android:name=".Wishlist"></activity>
+        <activity android:name=".Wishlist" />
+        <activity android:name="._SwipeActivityClass"></activity>
     </application>
 
 </manifest>
